# wilson-reborn

./: .gitignore  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  README.md  README.pt-BR.md
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  pages.yml  release.yml
crates/wilson/: Cargo.toml  build.rs
crates/wilson-dgds/: Cargo.toml
crates/wilson-dgds/src/: ads.rs  archive.rs  bmp.rs  chunk.rs  decompress.rs  error.rs  exe_sound.rs  fsutil.rs  installer.rs  lib.rs  pal.rs  pixels.rs  reader.rs  resource.rs  scr.rs  ttm.rs
crates/wilson-dgds/tests/: real_data.rs
crates/wilson-engine/: Cargo.toml
crates/wilson-engine/examples/: audit.rs  render_run.rs  xbr_one.rs  xbrz_one.rs
crates/wilson-engine/src/: ads_vm.rs  calcpath_data.rs  clock.rs  dissolve.rs  error.rs  island.rs  lib.rs  path.rs  rng.rs  show.rs  story.rs  surface.rs  ttm_exec.rs  ttm_vm.rs  upscale.rs  walk.rs  walk_data.rs  xbrz.rs
crates/wilson-engine/tests/: fidelity.rs
crates/wilson-saver/: Cargo.toml
crates/wilson-saver/macos/: Info.plist  WilsonRebornView.m  build-saver.sh
crates/wilson-saver/src/: lib.rs
crates/wilson-web/: Cargo.toml  README.md  build-web.sh  build.rs
crates/wilson-web/e2e/: README.md  package-lock.json  package.json  run.mjs
crates/wilson-web/src/: lib.rs
crates/wilson-web/web/: .gitignore  index.html
crates/wilson/assets/: make_icon.py  wilson.icns
crates/wilson/src/: assets.rs  audio.rs  clock.rs  config.rs  embedded.rs  font.rs  main.rs  pace.rs  scale.rs  state.rs  stats.rs  timectl.rs
crates/wilson/tests/: icon.rs  workflow_lint.rs
docs/: ARCHITECTURE.md  INSTALL.md  PROJECT-LOG.md
docs/knowledge-base/: 01-historia-e-creditos.md  02-biblia-de-conteudo.md  03-dados-originais-e-formatos.md  04-engine-scripting-opcodes.md  05-arquitetura-do-engine.md  06-projetos-de-referencia.md  07-plano-do-port-moderno.md  08-decisoes-e-status.md  09-paridade-e-easter-eggs.md  10-engenharia-reversa-do-original.md  README.md
docs/knowledge-base/raw/: castaway-dgdsviewer-notes.md  dgds-scummvm-notes.md  jc_reborn-notes.md  jcos-csharp-notes.md
docs/reverse-engineering/: .gitignore  README.md  disasm.py  extract_calcpath.py  ne.py
repos/: jc_reborn.msi
scripts/: build-embedded.sh
