[package]
name = "wilson-engine"
description = "SCRANTIC runtime for Wilson Reborn: headless TTM/ADS interpreters over an indexed Surface."
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true

[dependencies]
wilson-dgds = { path = "../wilson-dgds" }
