[package]
name = "wilson"
description = "Wilson Reborn — the Johnny Castaway screensaver app (winit + softbuffer)."
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
default-run = "wilson"

[features]
default = ["audio"]
audio = ["dep:rodio"]
# Build a self-contained binary with the original data embedded. Point WILSON_EMBED_DATA
# at a dir with RESOURCE.MAP + RESOURCE.001 (+ soundN.wav), then build with this feature.
embed-data = []

[dependencies]
wilson-dgds = { path = "../wilson-dgds" }
wilson-engine = { path = "../wilson-engine" }
winit = { version = "0.29", features = ["rwh_06"] }
softbuffer = "0.4"
rodio = { version = "0.17", default-features = false, features = ["wav"], optional = true }

# Used by build.rs (embed-data) to extract the original sounds from SCRANTIC.EXE when no
# soundN.wav are supplied.
[build-dependencies]
wilson-dgds = { path = "../wilson-dgds" }
