[package]
name = "wilson"
description = "Wilson Reborn — the Johnny Castaway screensaver app (winit + softbuffer)."
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
default-run = "wilson"

[features]
default = ["audio"]
audio = ["dep:rodio"]
# Build a self-contained binary with the original data embedded. Point WILSON_EMBED_DATA
# at a dir with RESOURCE.MAP + RESOURCE.001 (+ soundN.wav), then build with this feature.
embed-data = []

[dependencies]
wilson-dgds = { path = "../wilson-dgds" }
wilson-engine = { path = "../wilson-engine" }
winit = { version = "0.29", features = ["rwh_06"] }
softbuffer = "0.4"
rodio = { version = "0.17", default-features = false, features = ["wav"], optional = true }
# Read-only zip support so `--data` can take the Internet Archive scrantic-run.zip directly.
zip = { version = "2", default-features = false, features = ["deflate"] }

# Used by build.rs: wilson-dgds to extract the original sounds (embed-data) and decompress
# the installer; winres to embed the Windows app icon (build.rs gates on the target OS, so
# it is needed even when cross-compiling to Windows from a non-Windows host).
[build-dependencies]
wilson-dgds = { path = "../wilson-dgds" }
winres = "0.1"

[dev-dependencies]
# Full zip (with writer) to build fixtures for the --data zip tests.
zip = "2"
